# guanaco

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: conda.yml  python-package.yml  python-publish.yml
conda/: environment.yaml  meta.yaml
include/guanaco/: config.h  constants.h  correct.h  ctf.h  error.h  fft.h  filter.h  guanaco.h  reconstructor.h  system.h
src/guanaco/: __init__.py  command_line.py  plot.py
src/guanaco/detail/: __init__.py  correct.py  ctf.py  mp.py  reconstruct.py  temp.py
src/guanaco/detail/ext/: correct.cpp  correct.h  ctf.h  enums.h  fft.cpp  fft.cu  guanaco_ext.cpp  reconstruct.h  reconstructor.cpp  reconstructor.cu  reconstructor_gpu.cu
src/guanaco/ext/: guanaco_ext.cpp
src/libguanaco/: correct.cpp  correct.cu  fft.cpp  fft.cu  filter.cpp  filter.cu  reconstructor.cpp  reconstructor.cu
test/: test_ctf.py  test_rec.py  test_reconstruction.py
test/data/: centred_rotation_axis_centred_object_uncorrected_ctf.yaml  centred_rotation_axis_off_centre_object_uncorrected_ctf.yaml  off_centre_rotation_axis_off_centre_object_uncorrected_ctf.yaml
tests/: test_ctf.py  test_rec.py  test_reconstruction.py
tests/data/: off_centre_rotation_axis_centred_object_uncorrected_ctf.yaml
