[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2", "cmake", "ninja", "wheel", "pytest-runner"]
build-backend = "setuptools.build_meta"

[project]

name = "guanaco"

description = "3D CTF correction"

license =  "GPL-3.0-or-later"
license-files = [ "LICENSE" ]

readme = "README.md"

keywords = [
  "Tomography"
]

authors = [
  {name = "James Parkhurst", email = "james.parkhurst@rfi.ac.uk" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dynamic = [
  "version",
  "scripts",
  "dependencies",
  "optional-dependencies",
]

#
# Project urls
#
[project.urls]

"Source" = "https://github.com/rosalindfranklininstitute/guanaco"
"Tracker" = "https://github.com/rosalindfranklininstitute/guanaco/issues"

#
# Set the package version from git tag
#
[tool.setuptools.dynamic]

version = {attr = "guanaco._version.__version__"}

[tool.setuptools_scm]
write_to = "src/guanaco/_version.py"

#
# Configure pytest
#
[tool.pytest.ini_options]

testpaths = [ "tests" ]
