[metadata]
name = guanaco
version = 0.2.7

description = 3D CTF correction
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/rosalindfranklininstitute/guanaco

project_urls =
    Source=https://github.com/rosalindfranklininstitute/guanaco
    Tracker=https://github.com/rosalindfranklininstitute/guanaco/issues

author = James Parkhurst

author_email = james.parkhurst@diamond.ac.uk

license = GPL v3

license_file = LICENSE

keywords = 
    MULTEM

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Utilities
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

platforms = 
    unix
    linux
    osx
    cygwin
    win32

[aliases]
test = pytest

[tool:pytest]
testpaths=tests
addopts = --cov=src/guanaco --doctest-modules --ignore=pybind11 
